# banewfn

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean.sh  make.note  t
conf/: aromatic.conf  banewfn.rc  cdft.conf  charge.conf  ex.conf  excit.conf  fmo.conf  grid.conf  hole-ele.conf  surface.conf  weak.conf
src/: PLACEHOLDER_OVERVIEW.md  banewfn.cpp  banewfn.rc  config.cpp  config.h  input.cpp  input.h  ui.cpp  ui.h  utils.cpp  utils.h
